iter_language/tests/corpus/valid/queue-kafka-minimal.iter
queue kafka {
  bootstrap_servers = "localhost:9092"
  producer {
    topic = "iter-signals"
  }
  consumer {
    topics = ["iter-signals"]
    group_id = "iter-runner"
  }
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

prompt "do the thing"
runner { continue_on_error = false  behavior = wait }
