iter_language/tests/corpus/invalid/queue-servicebus-missing-entity-kind.iter
queue servicebus {
  fully_qualified_namespace = "iter-bus.servicebus.windows.net"
  auth { kind = "aad_default" }
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}
